@@ -1,3 +1,6 @@
+When using a pre-installed image, "anita install" will now boot it to
+let it resize itself, rather than postponing the resize to when the
+image is later booted in another mode such as "anita test".
 
 - 1.47 released -
 
